patches from dean_tessman@hotmail.com for bug 17159. Teach popups about if they are context menus and accept right clicks to select menu items if they are. r=hyatt, a=jar.